Fix inputs on small screens; Add extra spacing between action buttons

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -18,7 +18,7 @@
         flex-direction: column;
         align-items: center;
         li {
-          margin-bottom: 8px;
+          margin-bottom: 18px !important;
         }
       }
     }
