--- a/app/assets/stylesheets/style/mixins/theme/_viewPage.scss
+++ b/app/assets/stylesheets/style/mixins/theme/_viewPage.scss
@@ -65,7 +65,7 @@
         padding: 0 0 18px !important;
         width: 500px;
         @media (max-width: 575px) {
-          width: 400px;
+          width: 100%;
         }
         textarea {
           margin: 0 auto;
